Closed Bug 1627010 Opened 4 years ago Closed 4 years ago

User can zoom out further than initial zoom

Categories

(Core :: Panning and Zooming, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla78
Tracking Status
firefox75 --- disabled
firefox76 --- disabled
firefox77 --- disabled
firefox78 --- fixed

People

(Reporter: mbalfanz, Assigned: kats)

References

(Depends on 1 open bug, Blocks 1 open bug)

Details

(Whiteboard: apz-planning [apz:dtz:10:S])

Attachments

(1 file)

STR:

  • set apz.allow_zoom to true
  • visit planet.mozilla.org
  • zoom out using DesktopZooming

ER: the user should not be able to zoom out beyond the initial zoom level (same as Chrome's behavior)
AR: the user can zoom out further, until the horizontal overflow/scrollbar disappears

This might be an edge case as the site has a (probably unwanted) horizontal overflow. However, as a user this can be very confusing. The only way to reliably get back to the initial zoom level is a hard refresh.

Priority: -- → P3
Whiteboard: desktop-zoom-nightly
Whiteboard: desktop-zoom-nightly → apz-planning
Assignee: nobody → kats

https://treeherder.mozilla.org/#/jobs?repo=try&group_state=expanded&selectedTaskRun=YQLTxyL5S3CduVDwBrSoyw-0&revision=5267dbe8f5602ab371b8fa52681b4163c1bae2ba

The patch fixes the bug but there's a reftest where the diff is now increased beyond the fuzzy threshold. It's unexpected so I'll investigate.

The failure actually was expected, because the test in question tries to zoom out to 0.5 which is now being disallowed by my patch. So I disabled the test on desktop. New try push: https://treeherder.mozilla.org/#/jobs?repo=try&group_state=expanded&revision=57ad31480671a04a4f0b0fb3e98a1c3cefb638e5

THis should continue allowing users to zoom out in RDM mode, or any time that
we are respecting the meta-viewport tag. It's only when we don't respect the
meta-viewport tag that we disable zooming out past initial zoom.

Pushed by kgupta@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/33629b053c3c
Disallow user from zooming out past initial zoom on desktop. r=botond
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla78
Whiteboard: apz-planning → apz-planning [apz:dtz:10:S]
Regressions: 1647177
No longer regressions: 1647177
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: