Bug 1627010 - Disallow user from zooming out past initial zoom on desktop. r?botond

THis should continue allowing users to zoom out in RDM mode, or any time that
we are respecting the meta-viewport tag. It's only when we don't respect the
meta-viewport tag that we disable zooming out past initial zoom.